# my-agentic-tools

./: .gitignore  CLAUDE.md  README.md  dev_setup.py  environment.yml  pyproject.toml  setup.py  setup_conda_env.sh  temp_project_tracking_section.md  test_complete_workflow.py  test_firecrawl_access.py  test_gemini_extraction.py  test_scraper.py
api-integrations/: pyproject.toml
crewai-workflows/: pyproject.toml
document-generation/: pyproject.toml
langgraph-agents/: README.md  pyproject.toml
mcp-tools/: README.md  pyproject.toml
mygentic/: README.md  __init__.py  pyproject.toml
mygentic/api_integrations/: README.md  __init__.py
mygentic/crewai_workflows/: README.md  __init__.py
mygentic/document_generation/: README.md  __init__.py
mygentic/langgraph_agents/: __init__.py
mygentic/mcp_tools/: README.md  __init__.py
mygentic/shared/: __init__.py
mygentic/shared/base/: __init__.py  agent.py
mygentic/shared/config/: __init__.py  settings.py
mygentic/shared/logging/: __init__.py  logger.py
mygentic/web_scraping/: .env.example  __init__.py
mygentic/web_scraping/examples/: basic_scape.ipynb  basic_scrape.py
mygentic/web_scraping/tests/: test_yc_scraper.py
mygentic/web_scraping/yc_scraper/: __init__.py
mygentic/web_scraping/yc_scraper/clients/: firecrawl_client.py
mygentic/web_scraping/yc_scraper/core/: __init__.py  scraper.py
mygentic/web_scraping/yc_scraper/extractors/: __init__.py  job_extractor.py  pagination_handler.py
mygentic/web_scraping/yc_scraper/models/: company.py
mygentic/web_scraping/yc_scraper/utils/: data_cleaner.py  exporters.py
notebooks/: README.md  mygentic_demo.ipynb
scripts/: README.md  env_checker.py  lint_and_format.py
shared/: README.md  pyproject.toml
web-scraping/: README.md  pyproject.toml
web-scraping/examples/: basic_scrape.py
web-scraping/tests/: test_yc_scraper.py
web-scraping/yc_scraper/: README.md
web-scraping/yc_scraper/clients/: __init__.py  firecrawl_client.py  gemini_client.py
web-scraping/yc_scraper/core/: auth_handler.py  url_builder.py
web-scraping/yc_scraper/extractors/: company_extractor.py
web-scraping/yc_scraper/models/: __init__.py  job.py  search_params.py
web-scraping/yc_scraper/utils/: __init__.py
