[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-integrations"
version = "0.1.0"
description = "API wrappers and client integrations for various services"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "responses>=0.24.0",
    "httpx-mock>=0.11.0",
]